[package]
name = "glwindow"
version = "0.1.0-dev"
authors = ["Robert Czechowski <opengl@zgtm.eu>", "Kirill Chibisov <contact@kchibisov.com>"]
description = "Create a minimal window for OpenGl with glutin"
repository = "https://github.com/zgtm/glwindow"
license = "Apache-2.0"
rust-version = "1.70.0"
edition = "2021"

[features]
default = ["egl", "glx", "x11", "wayland", "wgl"]
egl = ["glutin-winit/egl", "png"]
glx = ["glutin-winit/glx"]
wgl = ["glutin-winit/wgl"]
x11 = ["glutin-winit/x11"]
wayland = ["glutin-winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita"]

[dependencies]
glutin = { version = "0.32.1", default-features = false }
glutin-winit = { version = "0.5.0", default-features = false }
png = { version = "0.17.6", optional = true }
raw-window-handle = "0.6"
winit = { version = "0.30.0", default-features = false, features = ["rwh_06"] }

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30.0", default-features = false, features = ["android-native-activity", "rwh_06"] }

[build-dependencies]
cfg_aliases = "0.2.1"
